@@ -380,7 +380,7 @@
    </p>
    <p>That's the theory.  Remember however that basic_string has additional
       type parameters, which take default arguments based on the character
-      type (called CharT here):
+      type (called <code>CharT</code> here):
    </p>
    <pre>
       template &lt;typename CharT,
@@ -405,10 +405,7 @@
    <p>and functions such as char_traits&lt;CharT&gt;::foo() are not
       actually defined anywhere for the general case.  The C++ standard
       permits this, because writing such a definition to fit all possible
-      CharT's cannot be done.  (For a time, in earlier versions of GCC,
-      there was a mostly-correct implementation that let programmers be
-      lazy.  :-)  But it broke under many situations, so it was removed.
-      You are no longer allowed to be lazy and non-portable.)
+      CharT's cannot be done.
    </p>
    <p>The C++ standard also requires that char_traits be specialized for
       instantiations of <code>char</code> and <code>wchar_t</code>, and it
@@ -417,16 +414,22 @@
    </p>
    <p>If you want to use character types other than char and wchar_t,
       such as <code>unsigned char</code> and <code>int</code>, you will
-      need to write specializations for them at the present time.  If you
-      want to use your own special character class, then you have
+      need suitable specializations for them.  For a time, in earlier
+      versions of GCC, there was a mostly-correct implementation that
+      let programmers be lazy but it broke under many situations, so it
+      was removed.  GCC 3.4 introduced a new implementation that mostly
+      works and can be specialized even for <code>int</code> and other
+      built-in types.
+   </p>
+   <p>If you want to use your own special character class, then you have
       <a href="http://gcc.gnu.org/ml/libstdc++/2002-08/msg00163.html">a lot
       of work to do</a>, especially if you with to use i18n features
       (facets require traits information but don't have a traits argument).
    </p>
-   <p>One example of how to specialize char_traits is given <a
-      href="http://gcc.gnu.org/ml/libstdc++/2002-08/msg00260.html">in
-      this message</a>, which was then put into the file <code>
-      include/ext/pod_char_traits.h</code> at a later date.  We agree
+   <p>Another example of how to specialize char_traits was given <a
+      href="http://gcc.gnu.org/ml/libstdc++/2002-08/msg00260.html">on the
+      mailing list</a> and at a later date was put into the file <code>
+      include/ext/pod_char_traits.h</code>.  We agree
       that the way it's used with basic_string (scroll down to main())
       doesn't look nice, but that's because <a
       href="http://gcc.gnu.org/ml/libstdc++/2002-08/msg00236.html">the
@@ -434,11 +437,6 @@
       href="http://gcc.gnu.org/ml/libstdc++/2002-08/msg00242.html">not
       be conforming C++</a>, due to the rule that CharT must be a POD.
       (See how tricky this is?)
-   </p>
-   <p>Other approaches were suggested in that same thread, such as providing
-      more specializations and/or some helper types in the library to assist
-      users writing such code.  So far nobody has had the time...
-      <a href="../17_intro/contribute.html">do you?</a>
    </p>
    <p>Return <a href="#top">to top of page</a> or
       <a href="../faq/index.html">to the FAQ</a>.
