@@ -203,7 +203,7 @@ mechanism may be required.
 </li>
 
 <li>
- Some encodings are require explicit endian-ness. As such, some kind
+ Some encodings require explicit endian-ness. As such, some kind
   of endian marker or other byte-order marker will be necessary. See
   &quot;Footnotes for C/C++ developers&quot; in Haible for more information on
   UCS-2/Unicode endian issues. (Summary: big endian seems most likely,
