@@ -284,11 +284,13 @@
    <pre>
       a.insert(p,t);</pre>
    <p>where 'p' is an iterator into the container 'a', and 't' is the item
-      to insert.  The standard says that &quot;iterator p is a hint
-      pointing to where the insert should start to search,&quot; but
-      specifies nothing more.  (LWG Issue #233, currently in review,
-      addresses this topic, but I will ignore it here because it is not yet
-      finalized.)
+      to insert.  The standard says that &quot;<code>t</code> is inserted
+      as close as possible to the position just prior to
+      <code>p</code>.&quot; (Library DR #233 addresses this topic, referring to
+      <a href='http://www.open-std.org/jtc1/sc22/wg21/docs/papers/2005/n1780.html'>N1780</a>.
+      Since version 4.2 GCC implements the resolution to DR 233, so that
+      insertions happen as close as possible to the hint. For earlier releases
+      the hint was only used as described below.
    </p>
    <p>Here we'll describe how the hinting works in the libstdc++
       implementation, and what you need to do in order to take advantage of
@@ -342,21 +344,17 @@
       <code>map</code> and <code>set</code> classes.  You should not use a hint
       argument in those releases.)
    </p>
-   <p>This behavior goes well with other container's <code>insert()</code>
+   <p>This behavior goes well with other containers' <code>insert()</code>
       functions which take an iterator:  if used, the new item will be
       inserted before the iterator passed as an argument, same as the other
-      containers.  The exception
-      (in a sense) is with a hint of <code>end()</code>:  the new item will
-      actually be inserted after <code>end()</code>, but it also becomes the
-      new <code>end()</code>.
+      containers. 
    </p>
    <p><strong>Note </strong> also that the hint in this implementation is a
-      one-shot.  The insertion-with-hint routines check the immediately
+      one-shot.  The older insertion-with-hint routines check the immediately
       surrounding entries to ensure that the new item would in fact belong
       there.  If the hint does not point to the correct place, then no
       further local searching is done; the search begins from scratch in
-      logarithmic time.  (Further local searching would only increase the
-      time required when the hint is too far off.)
+      logarithmic time.
    </p>
    <p>Return <a href="#top">to top of page</a> or
       <a href="../faq/index.html">to the FAQ</a>.
