@@ -306,7 +306,7 @@
       those end-of-line and end-of-file problems that we mentioned before.
       An instructive thread from comp.lang.c++.moderated delved off into
       this topic starting more or less at
-      <a href="http://groups.google.com/groups?oi=djq&selm=an_436187505">this</a>
+      <a href="http://groups.google.com/groups?oi=djq&amp;selm=an_436187505">this</a>
       article and continuing to the end of the thread.  (You'll have to
       sort through some flames every couple of paragraphs, but the points
       made are good ones.)
@@ -756,7 +756,7 @@
          descriptor, and provides the <code>fd()</code> function.
      </li>
    </ul>
-   <p>If you want to access a <code>filebuf</code>s file descriptor to
+   <p>If you want to access a <code>filebuf</code>'s file descriptor to
       implement file locking (e.g. using the <code>fcntl()</code> system
       call) then you might be interested in Henry Suter's
       <a href="http://suter.home.cern.ch/suter/RWLock.html">RWLock</a>
